fix home page alignment

--- a/designo-multi-page-website/client/src/components/Characteristics/Characteristics.module.scss
+++ b/designo-multi-page-website/client/src/components/Characteristics/Characteristics.module.scss
@@ -2,6 +2,7 @@
 
 .container {
   text-align: center;
+  margin: 0 auto;
   width: 1111px;
   display: flex;
   justify-content: space-between;
