--- a/designo-multi-page-website/client/src/components/Features/Features.module.scss
+++ b/designo-multi-page-website/client/src/components/Features/Features.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/variables.scss';
 
 .container {
+  margin: 0 auto;
   width: 1111px;
   display: flex;
   flex-direction: column;
