--- a/designo-multi-page-website/client/src/components/Hero/Hero.module.scss
+++ b/designo-multi-page-website/client/src/components/Hero/Hero.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/variables.scss';
 
 .heroContainer {
+  margin: 0 auto;
   width: 1111px;
   height: 640px;
   background-color: $primary-peach;
